# minecraft

./: .gitignore  CMakeLists.txt  README.md  minecraft_config.toml
config/: Minecraft.toml  Minecraft_switch_tables.toml
ppc/: ppc_config.h  ppc_context.h  ppc_func_mapping.cpp  ppc_recomp.0.cpp  ppc_recomp.1.cpp  ppc_recomp.10.cpp  ppc_recomp.11.cpp  ppc_recomp.12.cpp  ppc_recomp.13.cpp  ppc_recomp.14.cpp  ppc_recomp.15.cpp  ppc_recomp.16.cpp  ppc_recomp.17.cpp  ppc_recomp.18.cpp  ppc_recomp.19.cpp  ppc_recomp.2.cpp  ppc_recomp.20.cpp  ppc_recomp.21.cpp  ppc_recomp.22.cpp  ppc_recomp.23.cpp  ppc_recomp.24.cpp  ppc_recomp.25.cpp  ppc_recomp.26.cpp  ppc_recomp.27.cpp  ppc_recomp.28.cpp  ppc_recomp.3.cpp  ppc_recomp.4.cpp  ppc_recomp.5.cpp  ppc_recomp.6.cpp  ppc_recomp.7.cpp  ppc_recomp.8.cpp  ppc_recomp.9.cpp  ppc_recomp_shared.h
scripts/: export_named_funcs.py  func_dump.py
src/: kernel.cpp  main.cpp  runtime_main.cpp
src/ppc/: ppc_context.h  ppc_func_mapping.cpp  ppc_recomp.0.cpp  ppc_recomp.1.cpp  ppc_recomp.10.cpp  ppc_recomp.11.cpp  ppc_recomp.12.cpp  ppc_recomp.13.cpp  ppc_recomp.14.cpp  ppc_recomp.15.cpp  ppc_recomp.16.cpp  ppc_recomp.17.cpp  ppc_recomp.18.cpp  ppc_recomp.19.cpp  ppc_recomp.2.cpp  ppc_recomp.20.cpp  ppc_recomp.21.cpp  ppc_recomp.22.cpp  ppc_recomp.23.cpp  ppc_recomp.24.cpp  ppc_recomp.25.cpp  ppc_recomp.26.cpp  ppc_recomp.27.cpp  ppc_recomp.3.cpp  ppc_recomp.4.cpp  ppc_recomp.5.cpp  ppc_recomp.6.cpp  ppc_recomp.7.cpp  ppc_recomp.8.cpp  ppc_recomp.9.cpp  ppc_recomp_shared.h
src/simde_wrapper/: simd_ppc_helper.h  simd_wrapper.h
